[tool.poetry]
name = "export-snowflake"
version="4.1.0"
description = "Export for loading data from S3 to Snowflake"
authors = ["Wise"]
classifiers = [
          'License :: OSI Approved :: Apache Software License',
          'Programming Language :: Python :: 3 :: Only',
          'Programming Language :: Python :: 3.7',
          'Programming Language :: Python :: 3.8',
          'Programming Language :: Python :: 3.9',
      ]

[tool.poetry.dependencies]
python = ">3.9.1,<4.0.0"
pipelinewise-singer-python = "1.*"
snowflake-connector-python = "3.15.0"
inflection = "0.5.1"
joblib = "1.2.0"
boto3 = "1.40.0"
certifi = ">=2024.7.4"
pandas = "^2.3.1"
[tool.poetry.dev-dependencies]
pylint = "2.12.*"
pytest = "7.1.1"
pytest-cov = "*"
python-dotenv = "0.19.*"
toml = "*"
tesults = "*"
pytest-tesults = "*"
cryptography = "44.0.2"
idna = "3.7"
requests = "2.32.4"
zipp = "3.19.2"
pycryptodomex = "3.19.1"
setuptools = "80.9.0"

[tool.poetry.scripts]
export-snowflake = "export_snowflake:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"