[tool.poetry]
name = "export-snowflake"
version="4.3.0"
description = "Export for loading data from S3 to Snowflake"
authors = ["Wise"]


[tool.poetry.dependencies]
python = "^3.13.0"
singer-python = "6.3.0"
snowflake-connector-python = "^4.2.0"
pandas = "2.3.3"
inflection = "0.5.1"
joblib = "^1.5.3"
boto3 = "^1.42.19"
requests = "^2.33.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
pytest-cov = "*"
tesults = "*"
pytest-tesults = "*"

[tool.poetry.scripts]
export-snowflake = "export_snowflake:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
